[gd_scene load_steps=4 format=3 uid="uid://bcs6yx15qgf2b"]

[ext_resource type="Shader" uid="uid://dp1hn66gsihpv" path="res://root/autoload/game_manager/pause_screen/resorce/blur.gdshader" id="1_blur"]
[ext_resource type="Script" uid="uid://b0c0jkfed2pwo" path="res://root/scenes/game_scene/achievement_master/ui/menu/am_pause_menu.gd" id="2_script"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_menu"]
shader = ExtResource("1_blur")
shader_parameter/blur_amount = 1.5
shader_parameter/tint = Color(0, 0, 0, 1)
shader_parameter/tint_strength = 0.2
shader_parameter/saturation = 0.3

[node name="AmPauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 11
script = ExtResource("2_script")

[node name="MenuContent" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlurColorRect" type="ColorRect" parent="MenuContent"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_menu")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuPanel" type="PanelContainer" parent="MenuContent"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuContent/MenuPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContent/MenuPanel/MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MenuContent/MenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0

[node name="Equip" type="MarginContainer" parent="MenuContent/MenuPanel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Label" type="Label" parent="MenuContent/MenuPanel/MarginContainer/VBoxContainer/TabContainer/Equip"]
layout_mode = 2
size_flags_horizontal = 4
text = "開発中"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Status" type="MarginContainer" parent="MenuContent/MenuPanel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="MenuContent/MenuPanel/MarginContainer/VBoxContainer/TabContainer/Status"]
layout_mode = 2
size_flags_horizontal = 4
text = "開発中"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skill" type="MarginContainer" parent="MenuContent/MenuPanel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Label" type="Label" parent="MenuContent/MenuPanel/MarginContainer/VBoxContainer/TabContainer/Skill"]
layout_mode = 2
size_flags_horizontal = 4
text = "開発中"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Achievement" type="MarginContainer" parent="MenuContent/MenuPanel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Label" type="Label" parent="MenuContent/MenuPanel/MarginContainer/VBoxContainer/TabContainer/Achievement"]
layout_mode = 2
size_flags_horizontal = 4
text = "開発中"
horizontal_alignment = 1
vertical_alignment = 1
